--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ COMPOSE_PROJECT_NAME=travellers-palm
 APP_ENV=staging           # or production
 STARMAN_WORKERS=4
 PORT=5000
+sleutel=AIzaSyDZ1TWStdIWQYeNDBKpE6SgJSEd4EerEdg
