final working version

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,5 +1,6 @@
 server {
     listen 80;
+
     server_name localhost;
 
     # static files
@@ -11,8 +12,15 @@ server {
         alias /usr/src/app/public/js/;
     }
 
-    location /images/ {
-        autoindex on;
-        alias /usr/src/app/public/images/;
+    location / {
+        root /usr/src/app/public/images;
+        try_files $uri @app;
     }
+
+    location @app {
+        proxy_pass http://app:5000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
 }
