--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   app:
     build: .
+    working_dir: /usr/src/app
     container_name: travellers-palm-app
     ports:
       - "5000:5000"
