--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     container_name: travellers_palm_app
     volumes:
       - ./data:/usr/src/app/data       # <— host:container
+      - ./log:/usr/src/app/log
     expose:
       - "3000"
 
