--- a/config.yml
+++ b/config.yml
@@ -1,10 +1,24 @@
 # config.yml
+appname: "Travellers Palm"
+mode: "development"
+public_dir: "public"
+root: "/usr/src/app"
 secrets:
   - f22ebd363e5fffa6826f785b72de3c50db11aa67
-
-db:
+sqlserver:
   dsn: "dbi:SQLite:dbname=/usr/src/app/localdb/Jadoo_2006.db"
   username: ""
   password: ""
 
-app_name: "Travellers Palm"
+# Two server connections
+servers:
+  primary:
+     dsn: "dbi:SQLite:dbname=/usr/src/app/localdb/Jadoo_2006.db"
+     username: ""
+     password: ""
+  secondary:
+    host: "db2.example.com"
+    port: 5432
+    username: "user2"
+    password: "secret2"
+    database: "backup_db"
