--- a/config.yml
+++ b/config.yml
@@ -8,7 +8,7 @@ secrets:
 
 databases:
   jadoo:
-    dsn: "dbi:SQLite:dbname=/usr/src/app/db/Jadoo_2006.db"
+    dsn: "dbi:SQLite:dbname=/usr/src/app/localdb/Jadoo_2006.db"
     username: ""
     password: ""
     dbi_params:
@@ -17,7 +17,7 @@ databases:
       PrintError: 1
 
   users:
-    dsn: "dbi:SQLite:dbname=/usr/src/app/db/users.db"
+    dsn: "dbi:SQLite:dbname=/usr/src/app/localdb/users.db"
     username: ""
     password: ""
     dbi_params:
@@ -25,11 +25,10 @@ databases:
       AutoCommit: 1
       PrintError: 1
 
-plugins:
-  - MemcachedFast:
-      servers:
-        - "127.0.0.1:11211"
-      default_timeout: 3600
+memcached:
+  servers:
+    - "127.0.0.1:11211"
+  default_timeout: 3600
 
 plack_middlewares:
   -
