webtext calls improved

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     volumes:
       - ./data:/usr/src/app/data       # <— host:container
       - ./log:/usr/src/app/log
+    restart: always     
     expose:
       - "3000"
 
