--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   travellers_palm_app:
     build: .
@@ -9,6 +7,12 @@ services:
     volumes:
       - .:/usr/src/app
       - /usr/src/app/local  # preserve installed modules
+      - ./data:/usr/src/app/data  # Persistent DB & runtime data
+      - ./log:/usr/src/app/log # Application logs
+      - ./lib:/usr/src/app/lib:ro  # Mount code read-only
+      - ./templates:/usr/src/app/templates:ro
+      - ./public:/usr/src/app/public:ro
+      - ./localdb:/usr/src/app/localdb:ro
     ports:
       - "3000:3000"
     restart: always
