--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,13 @@ services:
     env_file:
       - .env
     volumes:
-      - .:/usr/src/app
-      - /usr/src/app/local  # preserve installed modules
       - ./data:/usr/src/app/data  # Persistent DB & runtime data
       - ./log:/usr/src/app/log # Application logs
-      - ./lib:/usr/src/app/lib:ro  # Mount code read-only
-      - ./templates:/usr/src/app/templates:ro
-      - ./public:/usr/src/app/public:ro
-      - ./localdb:/usr/src/app/localdb:ro
+      - ./lib:/usr/src/app/lib:ro  # Mount code read-only for hot reload
+      - ./templates:/usr/src/app/templates:ro # Template hot reload
+      - ./public:/usr/src/app/public:ro # Static assets
+      - ./localdb:/usr/src/app/localdb:ro # Seed databases
+      - travellers_palm_perl_modules:/usr/src/app/local
     ports:
       - "3000:3000"
     restart: always
@@ -27,3 +26,6 @@ services:
       - ./public:/usr/src/app/public:ro
     depends_on:
       - travellers_palm_app
+
+volumes:
+  travellers_palm_perl_modules:
